# icfpc-2019

./: .gitignore  LICENSE  README.txt  icfp2019.cabal  stack.yaml
data/part-3-clones-examples/: test
docker/: build.sh  download-solutions.sh  push.sh  submit-job.sh  upload-problems.sh
docker/balance/: Dockerfile  entrypoint.sh
docker/builder/: Dockerfile  entrypoint.sh
docker/runner/: Dockerfile  entrypoint.sh
lib/: MBA.hs  MHeap.hs  Util.hs
lib/ICFP2019/: AStar.hs  Action.hs  Booster.hs  Bresenham.hs  CoinPuzzle.hs  DFS.hs  LineOfSight.hs  Shape.hs  State.hs
lib/ICFP2019/Main/: Buyer.hs  CoinPuzzle.hs  Dfs.hs  DfsClone.hs  Greedy.hs  GreedyClone.hs  GreedyDfs.hs  Sim.hs  V0.hs
src/: Buyer.hs  CoinPuzzle.hs  Dfs.hs  DfsClone.hs  Greedy.hs  GreedyClone.hs  GreedyDfs.hs  Sim.hs  TestPuzzle.hs  V0.hs
tests/: Main.hs
tests/ICFP2019/LineOfSight/: Tests.hs
