Cabal-version:       2.2
Name:                icfp2019
Version:             0.1.0.0
Synopsis:            ICFP 2019 Contest
Description:         ICFP 2019 Contest
License:             BSD-3-Clause
License-file:        LICENSE
Author:              Adam Bratschi-Kaye, Akio Takano, Alex Lang, Jasper Van der Jeugt
Maintainer:          me@alang.ca
Copyright:           2019 Adam Bratschi-Kaye, Akio Takano, Alex Lang, Jasper Van der Jeugt
Homepage:            http://github.com/alang9/icfp-2019
Bug-reports:         http://github.com/alang9/icfp-2019/issues
Category:            Data
Build-type:          Simple
Extra-source-files:  README.md

Source-repository head
  Type:     git
  Location: git://github.com/alang9/icfp-2019.git

Library
  Hs-source-dirs:   lib
  Default-language: Haskell2010
  Ghc-options:      -Wall -O2

  Exposed-modules:
    ICFP2019.AStar
    ICFP2019.Action
    ICFP2019.LineOfSight
    ICFP2019.DFS
    ICFP2019.Main.CoinPuzzle
    ICFP2019.Main.Dfs
    ICFP2019.Main.Greedy
    ICFP2019.Main.GreedyClone
    ICFP2019.Main.DfsClone
    ICFP2019.Main.GreedyDfs
    ICFP2019.Main.Sim
    ICFP2019.Main.V0
    ICFP2019.Shape
    ICFP2019.State
    MBA
    MHeap
    Util

  Build-depends:
    base,
    unordered-containers,
    linear,
    attoparsec,
    bytestring,
    hashable,
    lens,
    containers,
    astar,
    vector,
    vector-instances,
    primitive,
    mwc-random,
    psqueues

Test-suite icfp2019-tests
  Hs-source-dirs:   tests
  Main-is:          Main.hs
  Type:             exitcode-stdio-1.0
  Default-language: Haskell2010
  Ghc-options:      -Wall -Werror -rtsopts -threaded

  Other-modules:
    ICFP2019.LineOfSight.Tests

  Build-depends:
    base,
    icfp2019,
    linear,
    tasty,
    tasty-quickcheck

Common exe
  Default-language: Haskell2010
  Hs-source-dirs:   src
  Ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  Build-depends:    base, icfp2019

Executable icfp2019-v0
  Import:  exe
  Main-is: V0.hs

Executable sim
  Import:  exe
  Main-is: Sim.hs

Executable dfs
  Import:  exe
  Main-is: Dfs.hs

Executable greedy
  Import:  exe
  Main-is: Greedy.hs

Executable greedy-dfs
  Import:  exe
  Main-is: GreedyDfs.hs

Executable greedy-clone
  Import:  exe
  Main-is: GreedyClone.hs

Executable dfs-clone
  Import:  exe
  Main-is: DfsClone.hs

Executable coin-puzzle
  Import:  exe
  Main-is: CoinPuzzle.hs
